[project]
name = "hazard-backend"
version = "0.1.0"
description = "Backend for hazard mapping and analysis platform"
authors = [
    {name = "Climate Atlas", email = "brendan@climateatlas.io"},
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

# Core runtime dependencies
# Pinned for deterministic builds – adjust as needed
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.29",
    "sqlmodel~=0.0.16",
    "psycopg[binary]~=3.1",
    "pydantic-settings~=2.2",
    "python-multipart~=0.0.7",
    "rasterio~=1.3",
    "geopandas~=0.14",
    "shapely~=2.0",
    "numpy~=1.26",
    "pandas~=2.2",
    "ipython>=9.2.0",
    "asyncpg>=0.30.0",
    "scipy>=1.15.2",
]

[project.optional-dependencies]
dev = [
    "ruff~=0.4",
    "black~=24.4",
    "pytest~=8.2",
    "pyright~=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100 
